# ucc-1

./: .gitignore  .gitmodules  autogen.sh  configure.ac
m4/: ucg.m4
src/: Makefile.am
src/coll_patterns/: dgx_rings.h  recursive_knomial.h  ring.h  sra_knomial.h
src/coll_score/: ucc_coll_score.c  ucc_coll_score.h
src/comp/: Makefile.am  ucc_comp.c  ucc_comp.h  ucc_comp_xucg.c  ucc_comp_xucg.h
src/components/base/: ucc_base_iface.h
src/components/cl/: ucc_cl.c  ucc_cl.h
src/components/cl/basic/: cl_basic_team.c
src/components/mc/cpu/: Makefile.am  mc_cpu.c  mc_cpu.h  mc_cpu_band.c  mc_cpu_bor.c  mc_cpu_bxor.c  mc_cpu_land.c  mc_cpu_lor.c  mc_cpu_lxor.c  mc_cpu_max.c  mc_cpu_min.c  mc_cpu_prod.c  mc_cpu_reduce.h  mc_cpu_sum.c  mc_cpu_template.h
src/components/tl/: ucc_tl.c  ucc_tl.h
src/core/: ucc_coll.c  ucc_context.c  ucc_context.h  ucc_lib.c  ucc_mc.c  ucc_mc.h  ucc_progress_queue.c  ucc_progress_queue_mt.c  ucc_sbgp.c  ucc_sbgp.h  ucc_team.c  ucc_team.h  ucc_topo.c  ucc_topo.h
src/schedule/: ucc_schedule.c  ucc_schedule.h  ucc_schedule_pipelined.c  ucc_schedule_pipelined.h
src/ucc/api/: ucc.h
src/utils/: ucc_coll_utils.c  ucc_coll_utils.h  ucc_datastruct.h  ucc_math.c  ucc_math.h  ucc_mpool.c  ucc_mpool.h  ucc_parser.h  ucc_proc_info.c  ucc_proc_info.h
test/gtest/: Makefile.am
test/gtest/common/: test_obj_size.cc  test_ucc.h
test/gtest/core/: test_alltoall.cc  test_schedule.cc
test/mpi/: buffer.cc  main.cc  test_allgather.cc  test_case.cc  test_mpi.cc  test_mpi.h  test_reduce_scatter.cc
tools/perf/: ucc_pt_benchmark.cc
(+50 files in other folders)
